--- a/Controle de Vendas.csproj
+++ b/Controle de Vendas.csproj
@@ -73,6 +73,7 @@
     <Compile Include="br.com.controlevendas.conexao\ConnectionFactory.cs" />
     <Compile Include="br.com.controlevendas.dao\ClienteDAO.cs" />
     <Compile Include="br.com.controlevendas.model\Cliente.cs" />
+    <Compile Include="br.com.controlevendas.model\Helpers.cs" />
     <Compile Include="br.com.controlevendas.view\FrmClientes.cs">
       <SubType>Form</SubType>
     </Compile>
